--- a/src/main/java/com/translator/gui/MainWindow.form
+++ b/src/main/java/com/translator/gui/MainWindow.form
@@ -63,6 +63,9 @@
         <Component class="javax.swing.JTextArea" name="txtOutput">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Monospaced" size="12" style="0"/>
+            </Property>
             <Property name="rows" type="int" value="5"/>
             <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
@@ -87,6 +90,9 @@
         <Component class="javax.swing.JTextArea" name="txtSource">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Monospaced" size="12" style="0"/>
+            </Property>
             <Property name="rows" type="int" value="5"/>
             <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
